<resources>
    <string name="app_name">Demo Dialog</string>
    <string name="demo_1">DEMO 1 -SIMPLE DIALOG</string>
    <string name="demo_2">DEMO 2 -BUTTONS DIALOG</string>
    <string name="demo_3">DEMO 3 -TEXT INPUT DIALOG</string>
    <string name="demo_4">DEMO 4 -DATEPICKER DIALOG</string>
    <string name="demo_5">DEMO 5 -TIMEPICKER DIALOG</string>
    <string name="input_enter">Enter Some Text</string>
    <string name="exercise_3">EXERCISE 3</string>
    <string name="enter_num_1">Enter Number 1 :</string>
    <string name="enter_num_2">Enter Number 2 :</string>
</resources>