<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnDemo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDemo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_2" />

        <TextView
            android:id="@+id/tvDemo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TexxtView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDemo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_3" />

        <TextView
            android:id="@+id/tvDemo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_3" />

        <TextView
            android:id="@+id/tvSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDemo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_4" />

        <TextView
            android:id="@+id/tvDemo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDemo5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_5" />

        <TextView
            android:id="@+id/tvDemo5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

</LinearLayout>